--- a/src/main/webapp/static/css/main.css
+++ b/src/main/webapp/static/css/main.css
@@ -730,6 +730,13 @@ body:not(.sidebar-left-mini) #menu .nav-header {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
     width: 100%;
     background-color: #fff;
+    overflow: auto;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 .box .body hr {
     margin-left: -10px;
